k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gh-bot-service
spec:
  selector:
    app: gh-bot
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
